--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         </plugins>
     </build>
 
+    <packaging>war</packaging>
 
     <repositories>
         <repository>
@@ -70,11 +71,6 @@
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
-            <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
             <version>1.2</version>
         </dependency>
 
